--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -23,13 +23,13 @@
             android:id="@+id/send_email"
             android:inputType="textEmailAddress"
             app:met_floatingLabel="normal"
-            android:hint="Your Email"
+            android:hint="Tên Email"
             android:layout_marginTop="20dp"/>
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Reset"
+            android:text="Đặt Lại"
             android:id="@+id/btn_reset"
             android:textColor="#fff"
             android:background="@color/Blue"
@@ -41,8 +41,7 @@
             android:gravity="center"
             android:layout_marginTop="15dp"
             android:textColor="#000"
-            android:text="By clicking RESET,
-             you will receive an email to reset you password"/>
+            android:text="Nhấn vào ĐẶT LẠI  bạn sẽ nhận được EMAIL để nhập lại mật khẩu "/>
 
     </LinearLayout>
 
