--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,7 +21,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Login"
+            android:text="Đăng nhập"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -39,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:hint="Password"
+            android:hint="Mật Khẩu"
             android:inputType="textPassword"
             app:met_floatingLabel="normal" />
 
@@ -48,8 +48,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:background="@color/colorPrimaryDark"
-            android:text="login"
+            android:background="@color/Blue"
+            android:text="Đăng nhập"
             android:textColor="#fff" />
 
         <TextView
@@ -59,7 +59,7 @@
             android:layout_gravity="end"
             android:layout_marginTop="10dp"
             android:gravity="center"
-            android:text="Forgot you password?"
+            android:text="Quên mật khẩu?"
             android:textColor="@color/colorPrimaryDark"
             android:textStyle="bold" />
 <LinearLayout
