--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -21,7 +21,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Create a new account"
+            android:text="Tạo tài khoản mới"
             android:textSize="20sp"
             android:textStyle="bold"/>
 
@@ -31,7 +31,7 @@
             android:id="@+id/username"
             android:layout_marginTop="10dp"
             app:met_floatingLabel="normal"
-            android:hint="Username"/>
+            android:hint="Tên Đăng nhập"/>
 
         <com.rengwuxian.materialedittext.MaterialEditText
             android:layout_width="match_parent"
@@ -49,12 +49,12 @@
             android:inputType="textPassword"
             android:layout_marginTop="10dp"
             app:met_floatingLabel="normal"
-            android:hint="Password"/>
+            android:hint="Mật Khẩu"/>
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="register"
+            android:text="Đăng ký"
             android:id="@+id/btn_register"
             android:background="@color/Blue"
             android:layout_marginTop="10dp"
