--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -67,11 +67,12 @@ android:id="@+id/users_recyclerview"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@null"
+android:inputType="textCapSentences"
 
-            android:inputType="textCapCharacters"
             android:hint="Nhắn gì đi đừng để trống"
             android:padding="15dp"
             />
+<!--        android:inputType="textCapCharacters"-->
         <ImageButton
             android:background="@null"
             android:layout_width="40dp"
