--- a/app/src/main/res/layout/activity_launch_screen.xml
+++ b/app/src/main/res/layout/activity_launch_screen.xml
@@ -6,25 +6,37 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ImageView
+        android:id="@+id/img_girl"
+        android:background="@drawable/img2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/img1" />
+         />
 
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="center_vertical"
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/tv_nameCreator"
             android:layout_width="wrap_content"
-            android:text="to van hung"
+            android:text="Tô Văn Hưng"
+            android:layout_gravity="center"
+            android:textColor="#fff"
+            android:textStyle="bold"
+            android:textSize="50sp"
             android:layout_height="wrap_content" />
 
         <TextView
+            android:id="@+id/tv_nameApp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="sosicalapp" />
+            android:layout_gravity="center"
+            android:textColor="#fff"
+            android:textSize="40sp"
+            android:text="Sosicalapp" />
     </LinearLayout>
 
 </FrameLayout>
