--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -1,20 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:gravity="center"
     android:orientation="vertical"
 
-    android:layout_height="match_parent"
->
+    android:layout_height="match_parent">
 
+    <ImageView
+        android:id="@+id/img_girl"
+        android:background="@drawable/img2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+    <LinearLayout
+        android:gravity="center"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Chat App"
-        android:textColor="#000000"
-        android:textSize="25sp"
+        android:text="Socical app"
+        android:textColor="#fff"
+        android:textSize="40sp"
         android:textStyle="bold"/>
 
     <Button
@@ -22,16 +33,19 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:id="@+id/login"
-android:textAllCaps="false"
-        android:textColor="#DB0C0C"
+        android:textAllCaps="false"
+android:background="@drawable/buttonstyle_login"
+        android:textColor="#fcff0b"
         android:text="Đăng nhập"/>
+
     <Button
+        android:id="@+id/register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-android:textAllCaps="false"
-        android:textColor="#DB0C0C"
         android:layout_marginTop="10dp"
-        android:id="@+id/register"
-        android:text="Đăng ký"/>
-
-</LinearLayout>
+        android:text="Đăng ký"
+        android:background="@drawable/buttonstyle_register"
+        android:textAllCaps="false"
+        android:textColor="#fcff0b" />
+    </LinearLayout>
+</FrameLayout>
