--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,11 +6,14 @@
     tools:context=".Fragment.HomeFragment">
 
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/post_recycleView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:text="Home" />
+        >
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+
 
 </FrameLayout>
