--- a/app/src/main/res/menu/menu_profile.xml
+++ b/app/src/main/res/menu/menu_profile.xml
@@ -3,13 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/logout"
+        android:id="@+id/menu_Plogout"
         android:title="Đăng xuất"
         app:showAsAction="never"/>
     <item
-        android:id="@+id/exit"
+        android:id="@+id/menu_Pexit"
         android:title="Thoát"
         app:showAsAction="never"/>
 
+    <item
+        android:id="@+id/menu_Ppost"
+        android:title="thêm bài"
+        android:icon="@drawable/ic_add_white"
+        app:showAsAction="always"/>
 
 </menu>
