--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,4 +10,7 @@
     <style parent="Theme.AppCompat.Light" name="MenuStyle">
         <item name="android:background">@android:color/white</item>
     </style>
+    <style name="light_noActionBar" parent="Theme.AppCompat.Light.NoActionBar">
+
+    </style>
 </resources>
