--- a/app/src/main/res/layout/activity_there_profile.xml
+++ b/app/src/main/res/layout/activity_there_profile.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F1EDED"
-    tools:context=".Fragment.ProfileFragment">
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    tools:context=".ThereProfileActivity">
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-<!--cover poto-->
+            <!--cover poto-->
             <ImageView
                 android:id="@+id/img_cover"
                 android:layout_width="match_parent"
@@ -29,7 +27,7 @@
                 android:layout_marginStart="20dp"
 
                 android:orientation="horizontal">
-                 <!--user photo-->
+                <!--user photo-->
                 <ImageView
                     android:id="@+id/img_avatar"
                     android:layout_width="wrap_content"
@@ -73,7 +71,7 @@
 
 
             </LinearLayout>
-<!--            recyclerview user specific post-->
+            <!--            recyclerview user specific post-->
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/post_recycleView"
                 android:layout_below="@+id/linearLayout"
@@ -81,20 +79,6 @@
                 android:layout_height="wrap_content"/>
         </RelativeLayout>
     </ScrollView>
-<!--    floatting button-->
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:src="@drawable/ic_edit"
-        app:backgroundTint="#520E85" />
 
 
-</RelativeLayout>
+
