--- a/app/src/main/res/layout/row_posts.xml
+++ b/app/src/main/res/layout/row_posts.xml
@@ -52,6 +52,7 @@
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:src="@drawable/ic_more_back_ho"
+
                 ></ImageButton>
 
 
@@ -82,6 +83,7 @@
             android:layout_height="wrap_content"
             android:padding="5dp"
             android:textColor="@color/design_default_color_error"
+            android:drawableLeft="@drawable/ic_like_green"
             android:text="10 k Likes"/>
         <View
             android:layout_width="match_parent"
@@ -97,7 +99,7 @@
                 android:id="@+id/btn_PLike"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Like"
+                android:text="Thích"
                 android:drawableLeft="@drawable/ic_like_back"
                 android:background="@color/white"
                 android:padding="10dp"
@@ -107,7 +109,7 @@
                 android:id="@+id/btn_Pcomment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="comment"
+                android:text="Bình luận"
                 android:drawableLeft="@drawable/ic_comment_back"
                 android:background="@color/white"
                 android:padding="10dp"
@@ -121,7 +123,7 @@
                 android:background="@color/white"
                 android:padding="10dp"
                 android:drawableStart="@drawable/ic_share_back"
-                android:text="share"
+                android:text="Chia sẻ"
 
                 android:layout_weight="1"/>
 
