--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -60,7 +60,7 @@
             android:layout_marginTop="10dp"
             android:gravity="center"
             android:text="Quên mật khẩu?"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/Black"
             android:textStyle="bold" />
 <LinearLayout
     android:layout_width="wrap_content"
