--- a/app/src/main/res/layout/row_posts.xml
+++ b/app/src/main/res/layout/row_posts.xml
@@ -77,14 +77,29 @@
             android:layout_width="wrap_content"
             android:layout_height="200dp"
             android:background="@color/white"/>
-        <TextView
-            android:id="@+id/tv_Plike"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:textColor="@color/design_default_color_error"
-            android:drawableLeft="@drawable/ic_like_green"
-            android:text="10 k Likes"/>
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/tv_Plike"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:layout_weight="1"
+                android:textColor="@color/design_default_color_error"
+                android:drawableLeft="@drawable/ic_like_green"
+                android:text="10 k Likes"/>
+            <TextView
+                android:id="@+id/tv_Pcomment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:textAlignment="textEnd"
+                android:layout_weight="1"
+                android:textColor="@color/Black"
+                android:text="10k comment"/>
+        </LinearLayout>
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
