--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -46,12 +46,16 @@
 
 
     </androidx.appcompat.widget.Toolbar>
-<androidx.recyclerview.widget.RecyclerView
-android:id="@+id/users_recyclerview"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_below="@+id/toolbar"
-    android:layout_above="@+id/chatlayout"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/users_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/chatlayout"
+        android:layout_below="@+id/toolbar"
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="-6dp" />
+
     <LinearLayout
         android:id="@+id/chatlayout"
         android:layout_width="match_parent"
