--- a/app/src/main/res/layout/row_comments.xml
+++ b/app/src/main/res/layout/row_comments.xml
@@ -2,53 +2,59 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="wrap_content"
     android:layout_margin="1dp"
     app:contentPadding="2dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/img_avatar"
+            android:orientation="horizontal">
+
+            <TextView
+
+                android:id="@+id/tv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:text="name"
+                android:textColor="@color/Black"
+                android:textSize="16dp"
+                android:textStyle="bold" />
+
+<!--            <TextView-->
+<!--                android:id="@+id/tv_time"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="30/10/1999"-->
+<!--                android:textColor="@color/Black"-->
+<!--                android:textSize="16dp"-->
+<!--                android:textStyle="bold" />-->
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tv_Pcomment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/linearLayout"
+            android:layout_toRightOf="@id/img_avatar"
+            android:text="comment"
+            android:textColor="@color/Black"
+
+            />
+
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/img_avatar"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginEnd="5dp"
             android:layout_marginRight="5dp"
-            android:src="@drawable/ic_image_default1"/>
-        <LinearLayout
-            android:layout_toRightOf="@id/img_avatar"
-            android:id="@+id/linearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-        <TextView
-
-            android:id="@+id/tv_name"
-            android:textStyle="bold"
-            android:paddingEnd="150dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16dp"
-            android:text="name"/>
-        <TextView
-            android:id="@+id/tv_time"
-            android:textStyle="bold"
-
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16dp"
-            android:text="30/10/1999"/>
-        </LinearLayout>
-        <TextView
-            android:id="@+id/tv_Pcomment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="comment"
-            android:textColor="@color/Black"
-            android:layout_toRightOf="@id/img_avatar"
-            android:layout_below="@id/linearLayout"
-
-            />
+            android:src="@drawable/ic_image_default1" />
     </RelativeLayout>
 </LinearLayout>
