--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 <item android:id="@+id/nav_home"
-    android:title="Home"
+    android:title="Trang chủ"
+
     android:icon="@drawable/ic_home"/>
     <item android:id="@+id/nav_profile"
-        android:title="Profile"
+        android:title="Thông tin"
+
         android:icon="@drawable/ic_profile"/>
     <item android:id="@+id/nav_users"
-        android:title="Users"
+        android:title="Danh bạ"
         android:icon="@drawable/ic_users"/>
     <item android:id="@+id/nav_chat"
-        android:title="Users"
+        android:title="Tin nhắn"
         android:icon="@drawable/ic_chat_message"/>
 </menu>
